--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -17,17 +17,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="../../web-component-tester/browser.js"></script>
 
     <!-- Step 1: import the element to test -->
-    <link rel="import" href="../seed-element.html">
+    <link rel="import" href="../valid-fields.html">
   </head>
   <body>
 
     <!-- You can use the document as a place to set up your fixtures. -->
-    <seed-element></seed-element>
+    <valid-fields name="first name"></valid-fields>
 
     <script>
-      var myEl = document.querySelector('seed-element');
+      var myEl = document.querySelector('valid-fields');
 
-      suite('<seed-element>', function() {
+      suite('<valid-fields>', function() {
+        test('defines a label with the name of the field', function(){
+          var label = myEl.querySelector('label');
+          assert.equal(label.textContent, 'first name');
+        });
+
+        test('defines the "errors" property', function(){
+          assert.equal(myEl.errors, []);
+        });
 
         test('defines the "author" property', function() {
           assert.equal(myEl.author.name, 'Dimitri Glazkov');
@@ -35,14 +43,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         });
 
         test('says hello', function() {
-          assert.equal(myEl.sayHello(), 'seed-element says, Hello World!');
+          assert.equal(myEl.sayHello(), 'valid-fields says, Hello World!');
 
           var greetings = myEl.sayHello('greetings Earthlings');
-          assert.equal(greetings, 'seed-element says, greetings Earthlings');
+          assert.equal(greetings, 'valid-fields says, greetings Earthlings');
         });
 
         test('fires lasers', function(done) {
-          myEl.addEventListener('seed-element-lasers', function(event) {
+          myEl.addEventListener('valid-fields-lasers', function(event) {
             assert.equal(event.detail.sound, 'Pew pew!');
             done();
           });
