--- a/demo/index.html
+++ b/demo/index.html
@@ -20,16 +20,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <p>An example of <code>&lt;valid-fields&gt;</code>:</p>
 
-    <button>Say Something</button>
-
-    <valid-fields name="username" author='{"name": "Lord Meowser", "image": "http://placekitten.com/g/200/300"}' fancy>
-    </valid-fields>
-
-    <script>
-      document.querySelector('button').addEventListener('click', function() {
-        alert(document.querySelector('valid-fields').sayHello('Hallo!'));
-      });
-    </script>
-
+    <h1>&lt;text-field&gt;</h1>
+    <text-field name="username"></text-field>
+    <text-field name="phone number"></text-field>
+    <text-field name="zip"></text-field>
+    <password-field></password-field>
   </body>
 </html>
