--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>valid-fields Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script>
+      window.Polymer = window.Polymer || {};
+      window.Polymer.dom = 'shadow';
+    </script>
     <link rel="import" href="../valid-fields.html">
   </head>
   <body>
@@ -21,9 +25,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <p>An example of <code>&lt;valid-fields&gt;</code>:</p>
 
     <h1>&lt;text-field&gt;</h1>
-    <text-field name="username"></text-field>
+    <text-field name="username" required></text-field>
     <text-field name="phone number"></text-field>
-    <text-field name="zip"></text-field>
+    <text-field name="zip" required></text-field>
     <password-field></password-field>
   </body>
 </html>
