password-field is now a composition based on text-field

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,10 +14,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>valid-fields Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script>
-      window.Polymer = window.Polymer || {};
-      window.Polymer.dom = 'shadow';
-    </script>
     <link rel="import" href="../valid-fields.html">
   </head>
   <body>
@@ -28,6 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <text-field name="username" required></text-field>
     <text-field name="phone number"></text-field>
     <text-field name="zip" required></text-field>
+    <h1>&lt;password-field&gt;</h1>
     <password-field></password-field>
   </body>
 </html>
