--- a/password-field.html
+++ b/password-field.html
@@ -8,6 +8,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="text-field.html">
 
 <!--
 An element providing a solution to no problem in particular.
@@ -33,13 +34,7 @@ Example:
   </style>
 
   <template>
-    <div class="password">
-      <h1>&lt;password-field&gt;</h1>
-      <label>
-        <span>password</span>
-        <input type="password"></input>
-      </label>
-    </div>
+    <text-field name="password" type="password" required></text-field>
   </template>
 
 </dom-module>
@@ -127,22 +122,7 @@ Example:
      * @param {string} greeting A positive greeting.
      * @return {string} The full greeting.
      */
-    sayHello: function(greeting) {
-      var response = greeting || 'Hello World!';
-      return 'password-field says, ' + response;
-    },
 
-    /**
-     * Attempts to destroy this element's enemies with an any beam of light!
-     *
-     * Or, at least, dispatches an event in the vain hope that someone else will
-     * do the zapping.
-     */
-    fireLasers: function() {
-      this.fire('password-field-lasers', {sound: 'Pew pew!'});
-    },
-
-    errors: []
 
   });
 
