--- a/valid-fields.html
+++ b/valid-fields.html
@@ -1,2 +1,4 @@
-<link rel="import" href="text-field.html">
-<link rel="import" href="password-field.html">
+<link rel="import" href="text-field.html" />
+<link rel="import" href="password-field.html" />
+<link rel="import" href="my-dumb-container.html" />
+<link rel="import" href="../paper-input/paper-input.html" />
